--- a/wiki-app/app/articles/components/editor.component.html
+++ b/wiki-app/app/articles/components/editor.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <board-toolbar class="col-12"></board-toolbar>
+  <ac-board-toolbar class="col-12"></ac-board-toolbar>
 </div>
 <div class="row" *ngIf="article; else createArticle">
   <div class="col-6">
