--- a/wiki-app/app/articles/components/article/article.component.html
+++ b/wiki-app/app/articles/components/article/article.component.html
@@ -1,10 +1,10 @@
 <div class="">
   <div class="title">
-    <!--[(ngModel)]="article.title"-->
+    <!--[(ngModel)]="content.title"-->
     <input  ngDefaultControl type="text" class="form-control" placeholder="Название">
   </div>
   <div class="content">
-    <!--[(ngModel)]="article.article"-->
+    <!--[(ngModel)]="content.content"-->
     <div  ngDefaultControl placeholder="Содержание статьи" contenteditable="true" class="contenteditable form-control"></div>
   </div>
   <div class="author">
