--- a/wiki-app/styles.css
+++ b/wiki-app/styles.css
@@ -10,3 +10,11 @@ html {
   -ms-overflow-style: none;
   overflow: auto;
 }
+
+.fill-remaining-space {
+  flex: 1 1 auto;
+}
+
+.full-width {
+  width: 100%;
+}
