--- a/wiki-app/app/articles/components/board-toolbar/board-toolbar.component.html
+++ b/wiki-app/app/articles/components/board-toolbar/board-toolbar.component.html
@@ -1,6 +1,6 @@
 
 
-<!--<div class="board-toolbar">-->
+<!--<div class="ac-board-toolbar">-->
   <!--<div [hidden]="content">-->
     <!--<button class="btn btn-secondary" (click)="findArticles()" data-toggle="modal" title="Открыть"-->
             <!--data-target="#openArticle">-->
