--- a/wiki-app/app/articles/components/board/board.component.html
+++ b/wiki-app/app/articles/components/board/board.component.html
@@ -1,9 +1,10 @@
 <table class="board">
   <tr *ngFor="let chunk of boardChunk" class="board-row">
     <td *ngFor="let i of chunk" class="board-coll">
-      <square [square]="squares[i]" class="float-left">
-        <draught *ngIf="squares[i]?.draught != null" [playsBlack]="board.black" [square]="squares[i]"></draught>
-      </square>
+      {{i}}
+      <!--<square [square]="squares[i]" class="float-left">-->
+        <!--<draught *ngIf="squares[i]?.draught != null" [playsBlack]="board.black" [square]="squares[i]"></draught>-->
+      <!--</square>-->
     </td>
   </tr>
 </table>
