--- a/wiki-app/styles.css
+++ b/wiki-app/styles.css
@@ -23,7 +23,7 @@ html {
 }
 
 .full-height {
-  height: 100vh;
+  height: 100%;
   /*height: -moz-calc(100% - 64px);*/
   /*height: -webkit-calc(100% - 64px);*/
   /*height: calc(100% - 64px);*/
