--- a/wiki-app/app/articles/components/board/board.component.css
+++ b/wiki-app/app/articles/components/board/board.component.css
@@ -1,8 +1,11 @@
-.board{
-  width:100px;
-  height:100px;
+.square {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
-.float-left {
-  float: left;
+.draught {
+  width:80%;
+  height:80%;
 }
