--- a/wiki-app/app/articles/components/board/draught/draught.component.css
+++ b/wiki-app/app/articles/components/board/draught/draught.component.css
@@ -1,5 +1,15 @@
+.draught-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .draught {
-  position: relative;
+  width: 80%;
+  height: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   z-index: 1;
   -webkit-border-radius: 100%;
   -moz-border-radius: 100%;
@@ -13,26 +23,8 @@
 .draught:before {
   border: 4px solid;
   content: '';
-  position: relative;
-  display: block;
-  top: 10%;
-  left: 10%;
-  width: 80%;
-  height: 80%;
-  -webkit-border-radius: 100%;
-  -moz-border-radius: 100%;
-  border-radius: 100%;
-}
-
-.draught:after {
-  border: 4px solid;
-  content: '';
-  position: absolute;
-  display: block;
-  top: 30%;
-  left: 30%;
-  width: 40%;
-  height: 40%;
+  width: 52%;
+  height: 52%;
   -webkit-border-radius: 100%;
   -moz-border-radius: 100%;
   border-radius: 100%;
