--- a/wiki-app/app/articles/components/board/draught/draught.component.html
+++ b/wiki-app/app/articles/components/board/draught/draught.component.html
@@ -1,11 +1,13 @@
 <!--{{'b ' + draught.beaten}}-->
-<div #draughtRef
-     *ngIf="!draught?.beaten"
-     [ngStyle]="{'width': size + 'px', 'height': size + 'px', 'color': draught?.black ? 'black' : 'white'}"
-     [ngClass]="{
+<div class="draught-container full-width full-height">
+  <div #draughtRef
+       *ngIf="!draught?.beaten"
+       [ngStyle]="{'color': draught?.black ? 'black' : 'white'}"
+       [ngClass]="{
      'highlight': draught?.highlighted,
      'draught': !draught?.queen,
      'draught-queen': draught?.queen}"
-     (click)="onDraughtClick()">
-  <div *ngIf="draught?.queen" class="queen" [ngStyle]="{'color': draught?.black ? 'black' : 'white'}">Q</div>
+       (click)="onDraughtClick()">
+    <div *ngIf="draught?.queen" class="queen" [ngStyle]="{'color': draught?.black ? 'black' : 'white'}">Q</div>
+  </div>
 </div>
