--- a/wiki-app/app/articles/components/board/square/square.component.css
+++ b/wiki-app/app/articles/components/board/square/square.component.css
@@ -20,8 +20,7 @@
 }
 
 .draught-in-square {
-  width: 100%;
-  height: 100%;
-  position: absolute;
+  display: flex;
+  justify-content: center;
   z-index: 1000;
 }
