--- a/wiki-app/app/articles/components/board/draught/draught.component.html
+++ b/wiki-app/app/articles/components/board/draught/draught.component.html
@@ -1,5 +1,5 @@
 <!--{{'b ' + draught.beaten}}-->
-<div class="draught-container full-width full-height">
+<div class="draught-container fit">
   <div #draughtRef
        *ngIf="!draught?.beaten"
        [ngStyle]="{'color': draught?.black ? 'black' : 'white'}"
