--- a/wiki-app/app/articles/components/board/board.component.html
+++ b/wiki-app/app/articles/components/board/board.component.html
@@ -1,7 +1,14 @@
 <md-grid-list [cols]="boardDim">
-  <md-grid-tile *ngFor="let square of squares">
-    <square [square]="square" class="square">
-      <draught class="draught" *ngIf="square?.draught != null" [playsBlack]="board.black" [square]="square"></draught>
+  <md-grid-tile *ngFor="let i of boardLength">
+    <div class="board-numbers-vertical" *ngIf="i % boardDim == 0 && (boardLength.length - i) != boardDim">
+      {{ boardDim - i / boardDim - 1 }}
+    </div>
+    <div class="board-numbers-horizontal" *ngIf="i % boardDim != 0 && boardLength.length - i <= boardDim">
+      {{ (boardLength.length - i - boardDim) * -1}}
+    </div>
+    <square *ngIf="squares[i]" [square]="squares[i]" class="square">
+      <draught class="draught" *ngIf="squares[i]?.draught != null" [playsBlack]="board.black"
+               [square]="squares[i]"></draught>
     </square>
   </md-grid-tile>
 </md-grid-list>
