--- a/wiki-app/app/articles/components/board-toolbar/draught-edit/draught-edit.component.html
+++ b/wiki-app/app/articles/components/board-toolbar/draught-edit/draught-edit.component.html
@@ -4,5 +4,5 @@
      'selected': selected,
      'draught': !queen,
      'draught-queen': queen}">
-  <div *ngIf="queen" class="queen" [ngStyle]="{'color': black ? 'black' : 'white'}">Q</div>
+  <!--<div *ngIf="queen" class="queen" [ngStyle]="{'color': black ? 'black' : 'white'}"></div>-->
 </div>
