--- a/wiki-app/app/articles/components/editor.component.html
+++ b/wiki-app/app/articles/components/editor.component.html
@@ -15,7 +15,7 @@
     </md-button-toggle>
   </md-button-toggle-group>
   <button md-raised-button value="write" (click)="undo.emit()">
-    <md-icon>undo</md-icon>
+    <md-icon aria-label="Отмена">undo</md-icon>
   </button>
   <button md-raised-button value="place" (click)="redo.emit()">
     <md-icon>redo</md-icon>
