--- a/wiki-app/app/articles/components/board-toolbar/draught-edit/draught-edit.component.css
+++ b/wiki-app/app/articles/components/board-toolbar/draught-edit/draught-edit.component.css
@@ -26,20 +26,6 @@
   border-radius: 100%;
 }
 
-.draught:after {
-  border: 4px solid;
-  content: '';
-  position: absolute;
-  display: block;
-  top: 30%;
-  left: 30%;
-  width: 40%;
-  height: 40%;
-  -webkit-border-radius: 100%;
-  -moz-border-radius: 100%;
-  border-radius: 100%;
-}
-
 .highlight {
   background-color: red;
 }
@@ -58,12 +44,19 @@
   border-radius: 100%;
 }
 
-.queen {
-  top: -3px;
-  left: 7px;
-  position: relative;
-  font-family: "Courier New", serif;
-  font-size: 25px;
+.draught-queen:before {
+  content: 'Q';
+  position: absolute;
+  display: block;
+  top: 30%;
+  left: 30%;
+  width: 40%;
+  height: 40%;
+  /*top: -3px;*/
+  /*left: 7px;*/
+  /*position: relative;*/
+  /*font-family: "Courier New", serif;*/
+  /*font-size: 25px;*/
 }
 
 .selected {
