--- a/wiki-app/app/articles/components/board/draught/draught.component.css
+++ b/wiki-app/app/articles/components/board/draught/draught.component.css
@@ -35,22 +35,30 @@
 }
 
 .draught-queen {
-  border: 4px solid;
-  z-index: 10;
-  position: relative;
-  -webkit-box-shadow: 1px 1px 10px 0 black;
-  -moz-box-shadow: 1px 1px 10px 0 black;
-  box-shadow: 1px 1px 10px 0 black;
+  width: 80%;
+  height: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
   -webkit-border-radius: 100%;
   -moz-border-radius: 100%;
   border-radius: 100%;
+  border: 4px solid;
+  -webkit-box-shadow: 1px 1px 10px 0 black;
+  -moz-box-shadow: 1px 1px 10px 0 black;
+  box-shadow: 1px 1px 10px 0 black;
 }
 
-.queen {
-  top: -2px;
-  left: 10px;
+.draught-queen:before {
+  content: 'Q';
+  font-size: 3rem;
   position: absolute;
+  display: block;
+  text-align: center;
+  line-height: 5rem;
+  width: 100%;
+  height: 100%;
   font-family: "Courier New", serif;
-  font-size: 30px;
-  z-index: 1000;
+  font-weight: bold;
 }
