--- a/wiki-app/app/articles/components/board/draught/draught.component.html
+++ b/wiki-app/app/articles/components/board/draught/draught.component.html
@@ -8,6 +8,6 @@
      'draught': !draught?.queen,
      'draught-queen': draught?.queen}"
        (click)="onDraughtClick()">
-    <div *ngIf="draught?.queen" class="queen" [ngStyle]="{'color': draught?.black ? 'black' : 'white'}">Q</div>
+    <!--<div *ngIf="draught?.queen" class="draught-queen" [ngStyle]="{'color': draught?.black ? 'black' : 'white'}"></div>-->
   </div>
 </div>
