--- a/wiki-app/app/articles/components/board-toolbar/draught-edit/draught-edit.component.css
+++ b/wiki-app/app/articles/components/board-toolbar/draught-edit/draught-edit.component.css
@@ -1,62 +1,50 @@
+.draught-edit-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 46px;
+}
+
+.draught-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .draught {
-  margin-left: 4px;
-  margin-right: 4px;
-  background-color: gray;
-  position: relative;
+  width: 80%;
+  height: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
   -webkit-border-radius: 100%;
   -moz-border-radius: 100%;
   border-radius: 100%;
   border: 4px solid;
-  -webkit-box-shadow: 1px 1px 4px 0 black;
-  -moz-box-shadow: 1px 1px 4px 0 black;
-  box-shadow: 1px 1px 4px 0 black;
 }
 
 .draught:before {
   border: 4px solid;
   content: '';
-  position: relative;
-  display: block;
-  top: 10%;
-  left: 10%;
-  width: 80%;
-  height: 80%;
+  width: 52%;
+  height: 52%;
   -webkit-border-radius: 100%;
   -moz-border-radius: 100%;
   border-radius: 100%;
-}
-
-.highlight {
-  background-color: red;
 }
 
 .draught-queen {
-  background-color: gray;
-  margin-right: 4px;
-  border: 4px solid;
-  z-index: 10;
-  position: relative;
-  -webkit-box-shadow: 1px 1px 4px 0 black;
-  -moz-box-shadow: 1px 1px 4px 0 black;
-  box-shadow: 1px 1px 4px 0 black;
+  width: 80%;
+  height: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
   -webkit-border-radius: 100%;
   -moz-border-radius: 100%;
   border-radius: 100%;
-}
-
-.draught-queen:before {
-  content: 'Q';
-  position: absolute;
-  display: block;
-  top: 30%;
-  left: 30%;
-  width: 40%;
-  height: 40%;
-  /*top: -3px;*/
-  /*left: 7px;*/
-  /*position: relative;*/
-  /*font-family: "Courier New", serif;*/
-  /*font-size: 25px;*/
+  border: 4px solid;
 }
 
 .selected {
